# bagof-factories

./: HANDOFF.md  README.md  pyproject.toml  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: coverage.yaml
docs/api/: base.md  builtins.md  collections.md  common.md  datetimes.md  enums.md  index.md  numbers.md  typeddicts.md  uuids.md
src/bagof/factories/: __init__.py  _compat.py  base.py  builtins.py  collections.py  common.py  datetimes.py  enums.py  numbers.py  typeddicts.py  uuids.py
tests/: test_base.py  test_builtins.py  test_collections.py  test_common.py  test_datetimes.py  test_enums.py  test_import.py  test_numbers.py  test_typeddicts.py  test_typevars.py  test_uuids.py
